<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.steve4744</groupId>
  <artifactId>TNTRun_reloaded</artifactId>
  <version>9.28-SNAPSHOT</version>
  <name>TNTRun_reloaded</name>
  <description>A Minecraft mini-game plugin</description>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
  </properties>

  <licenses>
    <license>
        <name>GNU General Public License</name>
        <url>https://opensource.org/licenses/GPL-3.0</url>
        <distribution>repo</distribution>
	</license>
  </licenses>

  <repositories>
    <!-- Spigot API Repo -->
    <repository>
        <id>spigot-repo</id>
        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <!-- mcMMO Repo -->
    <repository>
        <id>CodeMC</id>
        <url>https://repo.codemc.org/repository/maven-public/</url>
    </repository>
    <!-- HeadsPlus Repo -->
    <repository>
        <id>bs-repo</id>
        <url>https://ci.pluginwiki.us/plugin/repository/everything/</url>
    </repository>
    <!-- PlaceholderAPI Repo -->
    <repository>
        <id>placeholderapi-repo</id>
        <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
    </repository>
    <!-- WorldEdit Repo -->  
    <repository>
        <id>sk89q-repo</id>
        <url>https://maven.enginehub.org/repo/</url>
    </repository>
    <!-- Vault Repo -->
    <repository>
	    <id>jitpack.io</id>
	    <url>https://jitpack.io</url>
	</repository>
	<!-- AlessioDP Parties Repo -->
    <repository>
        <id>alessiodp-repo</id>
        <url>https://repo.alessiodp.com/releases/</url>
    </repository>
  </repositories>
  <dependencies>
    <!-- Spigot API -->
    <dependency>
        <groupId>org.spigotmc</groupId>
        <artifactId>spigot-api</artifactId>
        <version>1.20.5-R0.1-SNAPSHOT</version>
        <scope>provided</scope>
    </dependency>
    <!-- Vault API -->
    <dependency>
        <groupId>com.github.milkbowl</groupId>
        <artifactId>VaultAPI</artifactId>
        <version>1.7</version>
        <scope>provided</scope>
    </dependency>
    <!-- PlaceholderAPI -->
    <dependency>
        <groupId>me.clip</groupId>
        <artifactId>placeholderapi</artifactId>
        <version>2.11.5</version>
        <scope>provided</scope>
    </dependency>
    <!-- bStats -->
    <dependency>
        <groupId>org.bstats</groupId>
        <artifactId>bstats-bukkit</artifactId>
        <version>3.0.0</version>
        <scope>compile</scope>
    </dependency>
    <!-- WorldEdit -->
    <dependency>
        <groupId>com.sk89q.worldedit</groupId>
        <artifactId>worldedit-bukkit</artifactId>
        <version>7.3.1-SNAPSHOT</version>
        <scope>provided</scope>
    </dependency>
    <!-- HeadsPlus -->
    <dependency>
        <groupId>io.github.thatsmusic99</groupId>
        <artifactId>headsplus</artifactId>
        <version>7.1.0</version>
        <scope>provided</scope>
    </dependency>
    <!-- mcMMO -->
    <dependency>
        <groupId>com.gmail.nossr50.mcMMO</groupId>
        <artifactId>mcMMO</artifactId>
        <version>2.1.224</version>
        <scope>provided</scope>
        <exclusions>
          <exclusion>
              <groupId>com.sk89q.worldguard</groupId>
              <artifactId>worldguard-core</artifactId>
          </exclusion>
          <exclusion>
              <groupId>com.sk89q.worldguard</groupId>
              <artifactId>worldguard-legacy</artifactId>
          </exclusion>
          <exclusion>
              <groupId>org.apache.maven.scm</groupId>
              <artifactId>maven-scm-provider-gitexe</artifactId>
          </exclusion>
        </exclusions>
    </dependency>
    <!-- Parties -->
    <dependency>
        <groupId>com.alessiodp.parties</groupId>
        <artifactId>parties-api</artifactId>
        <version>3.2.13</version>
        <scope>provided</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
    <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.14.0</version>
        <scope>provided</scope>
    </dependency>
  </dependencies>
  <build>
    <finalName>${project.artifactId}-${project.version}</finalName>
	<defaultGoal>clean package</defaultGoal>

    <sourceDirectory>src/main/java</sourceDirectory>

    <resources>
      <resource>
          <targetPath>.</targetPath>
          <filtering>true</filtering>
          <directory>src/main/resources</directory>
          <includes>
              <include>plugin.yml</include>
              <include>config.yml</include>
              <include>lang/</include>
          </includes>
      </resource>
    </resources>

    <plugins>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.6.0</version>
          <configuration>
              <descriptorRefs>
                  <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
          </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.5.1</version>
          <configuration>
              <createDependencyReducedPom>false</createDependencyReducedPom>
                <artifactSet>
<!--                  <includes>-->
<!--                      <include>org.bstats:*</include>-->
<!--                 </includes>-->
                </artifactSet>
                <filters>
                  <filter>
                      <artifact>*:*</artifact>
                      <excludes>
                          <exclude>META-INF/</exclude>
                      </excludes>
                  </filter>
                </filters>
                <relocations>
                    <relocation>
                        <pattern>org.bstats</pattern>
                        <shadedPattern>tntrun</shadedPattern>
                    </relocation>
                </relocations>
            </configuration>
            <executions>
              <execution>
                  <phase>package</phase>
                  <goals>
                      <goal>shade</goal>
                  </goals>
              </execution>
            </executions>
      </plugin>
    </plugins>
  </build>
</project>